// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases/ destructure pattern array pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "elements": [
              {
                "kind": 10117,
                "name": "state",
              },
              {
                "kind": 10117,
                "name": "setState",
              },
            ],
            "kind": 10178,
          },
          "init": {
            "arguments": [],
            "callee": {
              "kind": 10117,
              "name": "useState",
            },
            "kind": 10167,
            "optional": false,
          },
          "kind": 10140,
        },
      ],
      "kind": 10139,
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern nested array pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "elements": [
              {
                "kind": 10176,
                "properties": [
                  {
                    "computed": false,
                    "key": {
                      "kind": 10117,
                      "name": "key",
                    },
                    "kind": 10177,
                    "shorted": true,
                    "value": undefined,
                  },
                  {
                    "computed": false,
                    "key": {
                      "kind": 10117,
                      "name": "value",
                    },
                    "kind": 10177,
                    "shorted": true,
                    "value": undefined,
                  },
                  {
                    "computed": false,
                    "key": {
                      "kind": 10117,
                      "name": "data",
                    },
                    "kind": 10177,
                    "shorted": false,
                    "value": {
                      "kind": 10176,
                      "properties": [
                        {
                          "computed": false,
                          "key": {
                            "kind": 10117,
                            "name": "users",
                          },
                          "kind": 10177,
                          "shorted": true,
                          "value": undefined,
                        },
                        {
                          "computed": false,
                          "key": {
                            "kind": 10117,
                            "name": "counters",
                          },
                          "kind": 10177,
                          "shorted": true,
                          "value": undefined,
                        },
                      ],
                    },
                  },
                  {
                    "computed": false,
                    "key": {
                      "kind": 10117,
                      "name": "names",
                    },
                    "kind": 10177,
                    "shorted": false,
                    "value": {
                      "elements": [
                        {
                          "kind": 10117,
                          "name": "userName1",
                        },
                        {
                          "kind": 10117,
                          "name": "userName2",
                        },
                      ],
                      "kind": 10178,
                    },
                  },
                ],
              },
            ],
            "kind": 10178,
          },
          "init": {
            "arguments": [],
            "callee": {
              "kind": 10117,
              "name": "useState",
            },
            "kind": 10167,
            "optional": false,
          },
          "kind": 10140,
        },
      ],
      "kind": 10139,
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern nested object pattern used in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "kind": 10176,
            "properties": [
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "props",
                },
                "kind": 10177,
                "shorted": false,
                "value": {
                  "kind": 10176,
                  "properties": [
                    {
                      "computed": false,
                      "key": {
                        "kind": 10117,
                        "name": "someProperty",
                      },
                      "kind": 10177,
                      "shorted": false,
                      "value": {
                        "kind": 10176,
                        "properties": [
                          {
                            "computed": false,
                            "key": {
                              "kind": 10117,
                              "name": "data",
                            },
                            "kind": 10177,
                            "shorted": true,
                            "value": undefined,
                          },
                          {
                            "computed": false,
                            "key": {
                              "kind": 10117,
                              "name": "value",
                            },
                            "kind": 10177,
                            "shorted": true,
                            "value": undefined,
                          },
                          {
                            "computed": false,
                            "key": {
                              "kind": 10117,
                              "name": "name",
                            },
                            "kind": 10177,
                            "shorted": true,
                            "value": undefined,
                          },
                        ],
                      },
                    },
                  ],
                },
              },
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "otherProps",
                },
                "kind": 10177,
                "shorted": true,
                "value": undefined,
              },
            ],
          },
          "init": {
            "kind": 10117,
            "name": "someNestedObject",
          },
          "kind": 10140,
        },
      ],
      "kind": 10139,
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;

exports[`cases/ destructure pattern object pattern in declaration 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "id": {
            "kind": 10176,
            "properties": [
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "data",
                },
                "kind": 10177,
                "shorted": true,
                "value": undefined,
              },
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "name",
                },
                "kind": 10177,
                "shorted": true,
                "value": undefined,
              },
              {
                "computed": false,
                "key": {
                  "kind": 10117,
                  "name": "value",
                },
                "kind": 10177,
                "shorted": true,
                "value": undefined,
              },
            ],
          },
          "init": {
            "kind": 10117,
            "name": "state",
          },
          "kind": 10140,
        },
      ],
      "kind": 10139,
      "variant": "const",
    },
  ],
  "kind": 10120,
}
`;
